--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -286,18 +286,21 @@
     "\\beta_i^m \\neq \\beta_i^3 \\mid \\text{estimated via separate regression / computed directly}. \\tag{44}\n",
     "$$\n",
     "\n",
-    "### 2.3 Executive Summary Formulation\n",
+    "### $ 2.3 \\; \\text{Executive Summary Formulation} $\n",
     "\n",
-    "This section elaborates on the mathematical formulation established in Sections 2.1 but for executives (innumerate):\n",
+    "$$ \\text{Innumerate}: \\tag{45}$$ \n",
     "\n",
-    "#### 2.3.1 Strategy I Breakdown\n",
+    "$$ \\text{Strategy I} \\tag{46}$$ \n",
     "\n",
-    "1. **Objective**: Maximize returns while considering risk.\n",
+    "$$ 1. \\; \\text{Objective} \\equiv \\text{Maximize Returns w/Risk}. \\tag{47}$$ \n",
     "\n",
-    "2. **Constraints**: \n",
-    "   - The portfolio's beta must be between $-0.5$ and $0.5$.\n",
-    "   - The sum of the weights assigned to each asset in the portfolio must equal $1$.\n",
-    "   - Each individual weight can range from $-2$ to $2$.\n",
+    "$$ 2. \\; \\text{Constraints}: $$\n",
+    "\n",
+    "   - $$ \\text{The portfolio's beta must be between} \\; -0.5 \\; \\text{and} \\; 0.5. \\tag{48} $$ \n",
+    "\n",
+    "   - $$ \\text{The sum of the weights assigned to each asset in the portfolio must equal} \\; 1. \\tag{49} $$\n",
+    "   \n",
+    "   - $$ \\text{Each individual weight can range from} \\; -2 \\; \\text{to} \\; 2. \\tag{50} $$\n",
     "\n",
     "#### 2.3.2 Strategy II Breakdown\n",
     "\n",
