--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -302,16 +302,11 @@
     "   \n",
     "   - $$ \\text{Each individual weight can range from} \\; -2 \\; \\text{to} \\; 2. \\tag{50} $$\n",
     "\n",
-    "#### 2.3.2 Strategy II Breakdown\n",
+    "<br>\n",
     "\n",
-    "1. **Objective**: Maximize returns relative to the portfolio's **tracking error volatility** (**TEV**), which measures how much the portfolio's returns deviate from a benchmark.\n",
-    "\n",
-    "2. **Constraints**:\n",
-    "   - The portfolio's beta must be between $-2$ and $2$.\n",
-    "   - The sum of the weights assigned to each asset in the portfolio must equal $1$.\n",
-    "   - Each individual weight can range from $-2$ to $2$.\n",
-    "\n",
-    "The next section establishes the necessary assumptions considered for strategic formulation and implementation."
+    "$$\n",
+    "\\text{Strategy II} \\tag{51}\n",
+    "$$"
    ]
   },
   {
