--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -306,7 +306,21 @@
     "\n",
     "$$\n",
     "\\text{Strategy II} \\tag{51}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "$$\n",
+    "1. \\; \\text{Objective} \\equiv \\text{Maximize Returns Relative to Tracking Error Volatility (TEV)}. \\tag{52}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "2. \\; \\text{Constraints}:\n",
+    "$$\n",
+    "\n",
+    "   - $$ \\text{The portfolio's beta must be between} \\; -2 \\; \\text{and} \\; 2. \\tag{53} $$\n",
+    "\n",
+    "   - $$ \\text{The sum of the weights assigned to each asset in the portfolio must equal} \\; 1. \\tag{54} $$\n",
+    "\n",
+    "   - $$ \\text{Each individual weight can range from} \\; -2 \\; \\text{to} \\; 2. \\tag{55} $$"
    ]
   },
   {
