--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -327,7 +327,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $ 3 \\; \\; \\text{Assumptions} $"
+    "## $ 3 \\; \\; \\text{Assumptions} $\n",
+    "\n",
+    "$$\n",
+    "\\text{Setup} : \\tag{56}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\text{Reallocation} : \\texttt{`03-01-2007`} \\sim \\texttt{`03-31-2024`} \\tag{57}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "$$"
    ]
   }
  ],
