--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -335,8 +335,7 @@
     "\n",
     "$$ 1. \\; \\; \\text{Reallocation} : \\texttt{`03-01-2007`} \\sim \\texttt{`03-31-2024`} \\tag{57} $$\n",
     "\n",
-    "$$ 2. \\; \\; \\text{Input Construction} : \\tag{58} $$\n",
-    "- $$\\text{Long-Term Look-Back Period} : 120 \\, \\text{Data Points}$ for estimation of a $\\text{Sample Covariance} \\; \\& \\; \\text{Sample Mean}$; i.e., $\\text{Scenario LT} \\equiv S_{120}$$."
+    "$$ 2. \\; \\; \\text{Input Construction} : \\tag{58} $$"
    ]
   }
  ],
