--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -335,7 +335,18 @@
     "\n",
     "$$ 1. \\; \\; \\text{Reallocation} : \\texttt{`03-01-2007`} \\sim \\texttt{`03-31-2024`} \\tag{57} $$\n",
     "\n",
-    "$$ 2. \\; \\; \\text{Input Construction} : \\tag{58} $$"
+    "$$ 2. \\; \\; \\text{Input Construction} : \\tag{58} $$\n",
+    "\n",
+    "- $$ \\text{LT LB Period} : n_{\\text{LT}} = 120 \\; \\mid \\Sigma_s \\; \\land \\; \\mu_s \\tag{59} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\text{Long-Term Look-Back Period} : 120 \\, \\text{Data Points}$ for estimation of a $\\text{Sample Covariance} \\; \\& \\; \\text{Sample Mean}$; \n",
+    "\n",
+    "i.e., $\\text{Scenario LT} \\equiv S_{120}$."
    ]
   }
  ],
