--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -337,7 +337,9 @@
     "\n",
     "$$ 2. \\; \\; \\text{Input Construction} : \\tag{58} $$\n",
     "\n",
-    "- $$ \\text{LT LB Period} : n_{\\text{LT}} = 120 \\; \\mid \\Sigma_s \\; \\land \\; \\mu_s \\tag{59} $$"
+    "- $$ \\text{LT LB Period} : n_{\\text{LT}} = 120 \\; \\mid \\; \\Sigma_s \\; \\land \\; \\mu_s \\; \\mid \\; \\text{LT} \\equiv S_{120} \\tag{59} $$\n",
+    "\n",
+    "- $$ $$"
    ]
   },
   {
