--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -339,14 +339,16 @@
     "\n",
     "- $$ \\text{LT LB Period} : n_{\\text{LT}} = 120 \\; \\mid \\; \\Sigma_s \\; \\land \\; \\mu_s \\; \\mid \\; \\text{LT} \\equiv S_{120} \\tag{59} $$\n",
     "\n",
-    "- $$ \\text{MT LB Period} : n_{\\text{LT}} = 90 \\; \\mid \\; \\Sigma_s \\; \\land \\; \\mu_s \\; \\mid \\; \\text{MT} \\equiv S_{120} \\tag{60} $$"
+    "- $$ \\text{MT LB Period} : n_{\\text{LT}} = 90 \\; \\mid \\; \\Sigma_s \\; \\land \\; \\mu_s \\; \\mid \\; \\text{MT} \\equiv S_{90} \\tag{60} $$\n",
+    "\n",
+    "- $$ \\text{ST LB Period} : n_{\\text{LT}} = 40 \\; \\mid \\; \\Sigma_s \\; \\land \\; \\mu_s \\; \\mid \\; \\text{MT} \\equiv S_{40} \\tag{61} $$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\text{Medium-Term Look-Back Period} : 90 \\, \\text{Data Points}$ for estimation of a $\\text{Sample Covariance} \\; \\& \\; \\text{Sample Mean}$; i.e., $\\text{Scenario MT} \\equiv S_{90}$."
+    "$\\text{Short-Term Look-Back Period} : 40 \\, \\text{Data Points}$ for estimation of a $\\text{Sample Covariance} \\; \\& \\; \\text{Sample Mean}$; i.e., $\\text{Scenario ST} \\equiv S_{40}$."
    ]
   }
  ],
