--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -341,7 +341,9 @@
     "\n",
     "- $$ \\text{MT LB Period} : n_{\\text{LT}} = 90 \\; \\mid \\; \\Sigma_s \\; \\land \\; \\mu_s \\; \\mid \\; \\text{MT} \\equiv S_{90} \\tag{60} $$\n",
     "\n",
-    "- $$ \\text{ST LB Period} : n_{\\text{LT}} = 40 \\; \\mid \\; \\Sigma_s \\; \\land \\; \\mu_s \\; \\mid \\; \\text{MT} \\equiv S_{40} \\tag{61} $$"
+    "- $$ \\text{ST LB Period} : n_{\\text{LT}} = 40 \\; \\mid \\; \\Sigma_s \\; \\land \\; \\mu_s \\; \\mid \\; \\text{MT} \\equiv S_{40} \\tag{61} $$\n",
+    "\n",
+    "$$ 3. \\; \\beta_T \\in \\{0, 1\\} \\tag{62} $$"
    ]
   },
   {
