--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -347,7 +347,11 @@
     "\n",
     "<br>\n",
     "\n",
-    "$$ 3. \\; \\beta_T \\in \\{0, 1\\} \\tag{62} $$"
+    "$$ 3. \\; \\boldsymbol{\\beta}_T \\in \\{0, 1\\} \\tag{62} $$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "$$ 4. \\; \\boldsymbol{\\lambda} \\in \\{0.10, 0.50\\} \\tag{63} $$"
    ]
   },
   {
