--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -329,9 +329,7 @@
    "source": [
     "## $ 3 \\; \\; \\text{Assumptions} $\n",
     "\n",
-    "$$\n",
-    "\\text{Setup} : \\tag{56}\n",
-    "$$\n",
+    "### $ 3.1 \\; \\text{Setup} $\n",
     "\n",
     "$$ 1. \\; \\; \\text{Reallocation} : \\texttt{`03-01-2007`} \\sim \\texttt{`03-31-2024`} \\tag{57} $$\n",
     "\n",
@@ -352,13 +350,6 @@
     "<br>\n",
     "\n",
     "$$ 4. \\; \\boldsymbol{\\lambda} \\in \\{0.10, 0.50\\} \\tag{63} $$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$\\text{Short-Term Look-Back Period} : 40 \\, \\text{Data Points}$ for estimation of a $\\text{Sample Covariance} \\; \\& \\; \\text{Sample Mean}$; i.e., $\\text{Scenario ST} \\equiv S_{40}$."
    ]
   }
  ],
