--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -349,7 +349,10 @@
     "\n",
     "<br>\n",
     "\n",
-    "$$ 4. \\; \\boldsymbol{\\lambda} \\in \\{0.10, 0.50\\} \\tag{63} $$"
+    "$$ 4. \\; \\boldsymbol{\\lambda} \\in \\{0.10, 0.50\\} \\tag{63} $$\n",
+    "\n",
+    "### $ 3.2 \\; \\text{Analysis} $\n",
+    "\n"
    ]
   }
  ],
