--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -351,8 +351,11 @@
     "\n",
     "$$ 4. \\; \\boldsymbol{\\lambda} \\in \\{0.10, 0.50\\} \\tag{63} $$\n",
     "\n",
-    "### $ 3.2 \\; \\text{Analysis} $\n",
-    "\n"
+    "### $ 3.2 \\; \\text{Period Analysis} $\n",
+    "\n",
+    "$$ \\text{Period Stratification} : \\tag{64} $$\n",
+    "\n",
+    "- $$ \\text{Period} \\; 1 \\; \\equiv \\text{Subprime} \\tag{65} $$"
    ]
   }
  ],
