--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -355,7 +355,15 @@
     "\n",
     "$$ \\text{Period Stratification} : \\tag{64} $$\n",
     "\n",
-    "- $$ \\text{Period} \\; 1 \\; \\equiv \\text{Subprime} \\tag{65} $$"
+    "- $$ \\text{Period} \\; 1 \\; \\equiv \\; \\text{Pre-Subprime} \\tag{65} $$\n",
+    "\n",
+    "- $$ \\text{Period} \\; 2 \\; \\equiv \\; text{Subprime} \\tag{66} $$\n",
+    "\n",
+    "- $$ \\text{Period} \\; 3 \\; \\equiv \\; \\text{Post-Subprime} \\tag{67} $$\n",
+    "\n",
+    "- $$ \\text{Period} \\; 4 \\; \\equiv \\; \\text{COVID} \\tag{68} $$\n",
+    "\n",
+    "- $$ \\text{Period} \\; 5 \\; \\equiv \\; \\text{Post-Covid} \\tag{69} $$"
    ]
   }
  ],
