--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -357,13 +357,53 @@
     "\n",
     "- $$ \\text{Period} \\; 1 \\; \\equiv \\; \\text{Pre-Subprime} \\tag{65} $$\n",
     "\n",
-    "- $$ \\text{Period} \\; 2 \\; \\equiv \\; text{Subprime} \\tag{66} $$\n",
+    "- $$ \\text{Period} \\; 2 \\; \\equiv \\; \\text{Subprime} \\tag{66} $$\n",
     "\n",
     "- $$ \\text{Period} \\; 3 \\; \\equiv \\; \\text{Post-Subprime} \\tag{67} $$\n",
     "\n",
     "- $$ \\text{Period} \\; 4 \\; \\equiv \\; \\text{COVID} \\tag{68} $$\n",
     "\n",
-    "- $$ \\text{Period} \\; 5 \\; \\equiv \\; \\text{Post-Covid} \\tag{69} $$"
+    "- $$ \\text{Period} \\; 5 \\; \\equiv \\; \\text{Post-Covid} \\tag{69} $$\n",
+    "\n",
+    "### $ 3.3 \\; \\text{BackTesting} $\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### $ 3.3 \\; \\text{BackTesting} $\n",
+    "\n",
+    "$$ \\text{Definition:} \\; \\text{Historical Data} \\Rightarrow \\text{Performance} \\tag{70} $$\n",
+    "\n",
+    "$$\n",
+    "\\text{Logistical Considerations:}\n",
+    "$$\n",
+    "\n",
+    "- $$ \\text{BackTest} \\neq \\; \\text{Forecasts} \\Rightarrow \\textbf{Snooping Bias / P-Hacking} \\tag{71} $$\n",
+    "\n",
+    "- $$ \\text{Weekly Rebalance} \\tag{72} $$\n",
+    "\n",
+    "$$\n",
+    "\\{t_i\\}_{i=1}^n :\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\begin{cases}\n",
+    "\\text{For the initial date} \\; t_1, \\; \\text{use the prior} \\; 60 \\; \\text{days of historical data to estimate inputs and run optimization.} \\\\\n",
+    "\\\\\n",
+    "\\text{Store the portfolio weights:} \\; \\omega_{t_1}. \\\\\n",
+    "\\\\\n",
+    "\\text{For each subsequent date} \\; t_{i+1}, \\; \\text{roll the historical data window by} \\; 5 \\; \\text{days, re-estimate inputs, and re-optimize.} \\\\\n",
+    "\\\\\n",
+    "\\text{Store the new portfolio weights:} \\; \\omega_{t_{i+1}}. \\\\\n",
+    "\\\\\n",
+    "\\text{Repeat this process until the target date} \\; t_n \\; \\text{is reached.}\n",
+    "\\end{cases} \n",
+    "\n",
+    "\\tag{73}\n",
+    "$$"
    ]
   }
  ],
