--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -377,9 +377,7 @@
     "\n",
     "- $$ \\text{Weekly Rebalance} \\tag{72} $$\n",
     "\n",
-    "$$\n",
-    "\\{t_i\\}_{i=1}^n :\n",
-    "$$\n",
+    "- $$ \\{t_i\\}_{i=1}^n : \\tag{73} $$ \n",
     "\n",
     "$$\n",
     "\\begin{cases}\n",
@@ -394,7 +392,7 @@
     "\\text{Repeat this process until the target date} \\; t_n \\; \\text{is reached.}\n",
     "\\end{cases} \n",
     "\n",
-    "\\tag{73}\n",
+    "\\tag{74}\n",
     "$$"
    ]
   }
