--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -395,6 +395,45 @@
     "\\tag{74}\n",
     "$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4 $\\,$ ToolKit / Arsenal\n",
+    "\n",
+    "$$ \\text{Strat I} \\Rightarrow \\texttt{CVXPY} \\mid \\text{Strat II} \\Rightarrow \\texttt{Nonlinear Optimizer} \\tag{75} $$\n",
+    "\n",
+    "- $\\text{Data (ETFs)} : $ `yfinance`\n",
+    "    1. $\\text{FXE}$\n",
+    "    2. $\\text{EWJ}$\n",
+    "    3. $\\text{GLD}$\n",
+    "    4. $\\text{QQQ}$\n",
+    "    5. $\\text{SPY}$\n",
+    "    6. $\\text{SHV}$\n",
+    "    7. $\\text{DBA}$\n",
+    "    8. $\\text{USO}$\n",
+    "    9. $\\text{XBI}$\n",
+    "    10. $\\text{ILF}$\n",
+    "    11. $\\text{EPP}$\n",
+    "    12. $\\text{FEZ}$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "- $$ \\text{To Do} $$\n",
+    "\n",
+    "    1. **Task 1** : `download_data(start_date, end_date)`, `compute_daily_returns(...)`, `annualize_data(...)`.\n",
+    "\n",
+    "    2. **Task 2** : `factor_model(...)`.\n",
+    "    \n",
+    "    3. **Task 3** : `optimize_model(...)`.\n",
+    "\n",
+    "    4. **Task 4** : `backtest(...)`\n",
+    "\n",
+    "    5. **Task 5** : `analyze(...)`\n",
+    "\n",
+    "    6. **Task 6** : `summarize(...)`"
+   ]
   }
  ],
  "metadata": {
