--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -404,6 +404,8 @@
     "\n",
     "$$ \\text{Strat I} \\Rightarrow \\texttt{CVXPY} \\mid \\text{Strat II} \\Rightarrow \\texttt{Nonlinear Optimizer} \\tag{75} $$\n",
     "\n",
+    "$$ \\text{Data (ETFs) } : \\texttt{yfinance} \\tag{76} $$\n",
+    "\n",
     "- $\\text{Data (ETFs)} : $ `yfinance`\n",
     "    1. $\\text{FXE}$\n",
     "    2. $\\text{EWJ}$\n",
