--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -11,7 +11,7 @@
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{This is my corrective action.} \\tag{0}\n",
+    "\\text{This is my corrective action and (my) letter (to you).} \\tag{0}\n",
     "$$"
    ]
   },
@@ -405,6 +405,30 @@
     "$$ \\text{Strat I} \\Rightarrow \\texttt{CVXPY} \\mid \\text{Strat II} \\Rightarrow \\texttt{Nonlinear Optimizer} \\tag{75} $$\n",
     "\n",
     "$$ \\text{Data (ETFs) } : \\texttt{yfinance} \\tag{76} $$\n",
+    "\n",
+    "- $$ 1. \\; \\text{FXE} $$\n",
+    "\n",
+    "- $$ 2. \\; \\text{EWJ} $$\n",
+    "\n",
+    "- $$ 3. \\; \\text{GLD} $$\n",
+    "\n",
+    "- $$ 4. \\; \\text{QQQ} $$\n",
+    "\n",
+    "- $$ 5. \\; \\text{SPY} $$\n",
+    "\n",
+    "- $$ 6. \\; \\text{SHV} $$\n",
+    "\n",
+    "- $$ 7. \\; \\text{DBA} $$\n",
+    "\n",
+    "- $$ 8. \\; \\text{USO} $$\n",
+    "\n",
+    "- $$ 9. \\; \\text{XBI} $$\n",
+    "\n",
+    "- $$ 10. \\; \\text{ILF} $$\n",
+    "\n",
+    "- $$ 11. \\; \\text{EPP} $$\n",
+    "\n",
+    "- $$ 12. \\; \\text{FEZ} $$\n",
     "\n",
     "- $\\text{Data (ETFs)} : $ `yfinance`\n",
     "    1. $\\text{FXE}$\n",
