--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -406,43 +406,29 @@
     "\n",
     "$$ \\text{Data (ETFs) } : \\texttt{yfinance} \\tag{76} $$\n",
     "\n",
-    "- $$ 1. \\; \\text{FXE} $$\n",
+    "- $$ 1. \\; \\text{FXE} \\tag{77} $$\n",
     "\n",
-    "- $$ 2. \\; \\text{EWJ} $$\n",
+    "- $$ 2. \\; \\text{EWJ} \\tag{78} $$\n",
     "\n",
-    "- $$ 3. \\; \\text{GLD} $$\n",
+    "- $$ 3. \\; \\text{GLD} \\tag{79} $$\n",
     "\n",
-    "- $$ 4. \\; \\text{QQQ} $$\n",
+    "- $$ 4. \\; \\text{QQQ} \\tag{80} $$\n",
     "\n",
-    "- $$ 5. \\; \\text{SPY} $$\n",
+    "- $$ 5. \\; \\text{SPY} \\tag{81} $$\n",
     "\n",
-    "- $$ 6. \\; \\text{SHV} $$\n",
+    "- $$ 6. \\; \\text{SHV} \\tag{82} $$\n",
     "\n",
-    "- $$ 7. \\; \\text{DBA} $$\n",
+    "- $$ 7. \\; \\text{DBA} \\tag{83} $$\n",
     "\n",
-    "- $$ 8. \\; \\text{USO} $$\n",
+    "- $$ 8. \\; \\text{USO} \\tag{84} $$\n",
     "\n",
-    "- $$ 9. \\; \\text{XBI} $$\n",
+    "- $$ 9. \\; \\text{XBI} \\tag{85} $$\n",
     "\n",
-    "- $$ 10. \\; \\text{ILF} $$\n",
+    "- $$ 10. \\; \\text{ILF} \\tag{86} $$\n",
     "\n",
-    "- $$ 11. \\; \\text{EPP} $$\n",
+    "- $$ 11. \\; \\text{EPP} \\tag{87} $$\n",
     "\n",
-    "- $$ 12. \\; \\text{FEZ} $$\n",
-    "\n",
-    "- $\\text{Data (ETFs)} : $ `yfinance`\n",
-    "    1. $\\text{FXE}$\n",
-    "    2. $\\text{EWJ}$\n",
-    "    3. $\\text{GLD}$\n",
-    "    4. $\\text{QQQ}$\n",
-    "    5. $\\text{SPY}$\n",
-    "    6. $\\text{SHV}$\n",
-    "    7. $\\text{DBA}$\n",
-    "    8. $\\text{USO}$\n",
-    "    9. $\\text{XBI}$\n",
-    "    10. $\\text{ILF}$\n",
-    "    11. $\\text{EPP}$\n",
-    "    12. $\\text{FEZ}$\n",
+    "- $$ 12. \\; \\text{FEZ} \\tag{88} $$\n",
     "\n",
     "<br>\n",
     "\n",
