--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -400,7 +400,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4 $\\,$ ToolKit / Arsenal\n",
+    "## $ 4 \\; \\; \\text{ToolKit} \\mid \\text{Arsenal} $\n",
     "\n",
     "$$ \\text{Strat I} \\Rightarrow \\texttt{CVXPY} \\mid \\text{Strat II} \\Rightarrow \\texttt{Nonlinear Optimizer} \\tag{75} $$\n",
     "\n",
