--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -98,66 +98,66 @@
     "<br>\n",
     "\n",
     "$$\n",
-    "\\text{Portfolio Characteristics}:\n",
+    "\\text{Portfolio Characteristics}: \\tag{18}\n",
     "$$\n",
     "\n",
-    "- $$ \\text{Return}: \\mu \\tag{18} $$\n",
+    "- $$ \\text{Return}: \\mu \\tag{19} $$\n",
     "\n",
-    "- $$ \\text{Volatility (Vol)}: \\sigma \\tag{19} $$\n",
+    "- $$ \\text{Volatility (Vol)}: \\sigma \\tag{20} $$\n",
     "\n",
-    "- $$ \\text{Skewness (Skew)}: \\mathbb{E}\\left[\\left(\\frac{x - \\mu}{\\sigma}\\right)^3\\right] = \\frac{\\mu_3}{\\sigma^3} = \\frac{\\kappa_3}{\\kappa_2^{3/2}} \\tag{20} $$\n",
+    "- $$ \\text{Skewness (Skew)}: \\mathbb{E}\\left[\\left(\\frac{x - \\mu}{\\sigma}\\right)^3\\right] = \\frac{\\mu_3}{\\sigma^3} = \\frac{\\kappa_3}{\\kappa_2^{3/2}} \\tag{21} $$\n",
     "\n",
-    "- $$ \\text{Value at Risk (VaR) / Expected Shortfall (ES)} \\tag{21} $$\n",
+    "- $$ \\text{Value at Risk (VaR) / Expected Shortfall (ES)} \\tag{22} $$\n",
     "\n",
-    "- $$ \\text{Sharpe Ratio}: \\frac{\\mathbb{E}[R_a - R_b]}{\\sigma_a} = \\frac{\\mathbb{E}[R_a - R_b]}{\\sqrt{\\mathbb{V}(R_a - R_b)}} \\tag{22} $$\n",
+    "- $$ \\text{Sharpe Ratio}: \\frac{\\mathbb{E}[R_a - R_b]}{\\sigma_a} = \\frac{\\mathbb{E}[R_a - R_b]}{\\sqrt{\\mathbb{V}(R_a - R_b)}} \\tag{23} $$\n",
     "\n",
     "### $1.4 \\; \\text{Simplification}$\n",
     "\n",
-    "$$ \\text{Look-Back} \\; \\boldsymbol{\\mu} \\; \\text{Estimators}: $$\n",
+    "$$ \\text{Look-Back} \\; \\boldsymbol{\\mu} \\; \\text{Estimators}: \\tag{24} $$\n",
     "\n",
-    "- $$ \\text{Long-Term Estimator (LTE)} : \\text{LT} \\Rightarrow \\text{LB} \\in \\{180 \\; \\text{Days}\\} \\tag{23} $$\n",
+    "- $$ \\text{Long-Term Estimator (LTE)} : \\text{LT} \\Rightarrow \\text{LB} \\in \\{180 \\; \\text{Days}\\} \\tag{25} $$\n",
     "\n",
-    "- $$ \\text{Mid-Term Estimator (MTE)} : \\text{MT} \\Rightarrow \\text{LB} \\in \\{90 \\; \\text{Days}\\} \\tag{24} $$\n",
+    "- $$ \\text{Mid-Term Estimator (MTE)} : \\text{MT} \\Rightarrow \\text{LB} \\in \\{90 \\; \\text{Days}\\} \\tag{26} $$\n",
     "\n",
-    "- $$ \\text{Short-Term Estimator (STE)} : \\text{ST} \\Rightarrow \\text{LB} \\in \\{40 \\; \\text{Days}, 60 \\; \\text{Days}\\} \\tag{25} $$\n",
+    "- $$ \\text{Short-Term Estimator (STE)} : \\text{ST} \\Rightarrow \\text{LB} \\in \\{40 \\; \\text{Days}, 60 \\; \\text{Days}\\} \\tag{27} $$\n",
     "\n",
     "<br>\n",
     "\n",
     "$$\n",
-    "\\text{Term-Structure for Covariance} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\text{Expected Return} \\; \\boldsymbol{\\mu}. \\tag{26}\n",
+    "\\text{Term-Structure for Covariance} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\text{Expected Return} \\; \\boldsymbol{\\mu}. \\tag{28}\n",
     "$$\n",
     "\n",
     "### $ 1.5 \\; \\text{Synthesis} $\n",
     "\n",
     "$$\n",
-    "\\text{Optimal portfolio behavior constructed from} \\tag{27}\n",
+    "\\text{Optimal portfolio behavior constructed from} \\tag{29}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{covariance and expected return estimators} \\tag{28}\n",
+    "\\text{covariance and expected return estimators} \\tag{30}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{will vary due to strategic and market differences}. \\tag{29}\n",
-    "$$\n",
-    "\n",
-    "<br>\n",
-    "\n",
-    "$$\n",
-    "S_{40}^{90} \\equiv \\boldsymbol{\\hat{\\Sigma}} \\Rightarrow \\text{40 Days} \\; \\land \\; \\boldsymbol{\\hat{\\mu}} \\Rightarrow \\text{90 Days} \\tag{30}\n",
+    "\\text{will vary due to strategic and market differences}. \\tag{31}\n",
     "$$\n",
     "\n",
     "<br>\n",
     "\n",
     "$$\n",
-    "\\text{Objective}:\n",
+    "S_{40}^{90} \\equiv \\boldsymbol{\\hat{\\Sigma}} \\Rightarrow \\text{40 Days} \\; \\land \\; \\boldsymbol{\\hat{\\mu}} \\Rightarrow \\text{90 Days} \\tag{32}\n",
     "$$\n",
     "\n",
-    "- $$ \\text{Evaluate Hypothesis} \\tag{31} $$\n",
+    "<br>\n",
     "\n",
-    "- $$ \\text{Demonstrate Robustness (Or Lack Thereof)} \\tag{32} $$\n",
+    "$$\n",
+    "\\text{Objective}: \\tag{33}\n",
+    "$$\n",
     "\n",
-    "- $$ \\text{Market Regime Stratification} \\tag{33} $$"
+    "- $$ \\text{Evaluate Hypothesis} \\tag{34} $$\n",
+    "\n",
+    "- $$ \\text{Demonstrate Robustness (Or Lack Thereof)} \\tag{35} $$\n",
+    "\n",
+    "- $$ \\text{Market Regime Stratification} \\tag{36} $$"
    ]
   },
   {
@@ -198,7 +198,7 @@
     "\n",
     "\\quad \n",
     "\n",
-    "         \\tag{34}\n",
+    "         \\tag{37}\n",
     "\n",
     "$$\n",
     "\n",
@@ -230,7 +230,7 @@
     "\n",
     "\\quad \n",
     "\n",
-    "         \\tag{35}\n",
+    "         \\tag{38}\n",
     "\n",
     "$$\n",
     "\n",
@@ -243,39 +243,39 @@
     "- $ \\text{TEV}(\\omega) = \\sigma(r_P(\\omega) - r_{\\text{SPY}}) \\equiv \\text{Tracking Error Volatility}; \\\\ \\text{trivial derivation (reader exercise)}: $\n",
     "\n",
     "$$\n",
-    "\\sigma(r_P(\\omega) - r_{\\text{SPY}}) = \\sqrt{\\omega^{\\intercal} \\Sigma \\omega - 2 \\omega^{\\intercal} \\text{Cov}(r, r_{\\text{SPY}}) + \\sigma_{\\text{SPY}}^2}.         \\tag{36}\n",
+    "\\sigma(r_P(\\omega) - r_{\\text{SPY}}) = \\sqrt{\\omega^{\\intercal} \\Sigma \\omega - 2 \\omega^{\\intercal} \\text{Cov}(r, r_{\\text{SPY}}) + \\sigma_{\\text{SPY}}^2}.         \\tag{39}\n",
     "$$\n",
     "\n",
     "### $ 2.2 \\; \\text{Fama–French Three-Factor Model (FF3FM)} $\n",
     "\n",
-    "$$ \\text{Definition}: \\tag{37}$$ \n",
+    "$$ \\text{Definition}: \\tag{40}$$ \n",
     "\n",
     "$$\n",
-    "r_i = r_f + \\beta_i^3(r_M - r_f) + b_i^s r_{\\text{SMB}} + b_i^v r_{\\text{HML}} + \\alpha_i + \\epsilon_i         \\tag{38}\n",
+    "r_i = r_f + \\beta_i^3(r_M - r_f) + b_i^s r_{\\text{SMB}} + b_i^v r_{\\text{HML}} + \\alpha_i + \\epsilon_i         \\tag{41}\n",
     "$$\n",
     "\n",
     "$ \\mathbb{E}[\\epsilon_i] = 0; \\, \\therefore $\n",
     "\n",
     "$$\n",
-    "\\rho_i = r_f + \\beta_i^3 (\\rho_M - r_f) + b_i^s \\rho_{\\text{SMB}} + b_i^v \\rho_{\\text{HML}} + \\alpha_i         \\tag{39}\n",
+    "\\rho_i = r_f + \\beta_i^3 (\\rho_M - r_f) + b_i^s \\rho_{\\text{SMB}} + b_i^v \\rho_{\\text{HML}} + \\alpha_i         \\tag{42}\n",
     "$$\n",
     "\n",
     "<br>\n",
     "\n",
     "$$\n",
-    "\\text{Estimated Coefficient Vector}: \\tag{40}\n",
+    "\\text{Estimated Coefficient Vector}: \\tag{43}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "(\\hat{\\beta}_i^3, \\hat{b}_i^s, \\hat{b}_i^v)^{\\intercal} \\Leftarrow y_i = \\rho_i - r_f \\tag{41}        \n",
+    "(\\hat{\\beta}_i^3, \\hat{b}_i^s, \\hat{b}_i^v)^{\\intercal} \\Leftarrow y_i = \\rho_i - r_f \\tag{44}        \n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{Linear Regression}: \\tag{42}\n",
+    "\\text{Linear Regression}: \\tag{45}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "= \\hat{\\beta}_i^3 (\\rho_M - r_f) + \\hat{\\beta}_i^s r_{\\text{SMB}} + \\hat{b}_i^v \\rho_{\\text{HML}} + \\epsilon_i \\tag{43}           \n",
+    "= \\hat{\\beta}_i^3 (\\rho_M - r_f) + \\hat{\\beta}_i^s r_{\\text{SMB}} + \\hat{b}_i^v \\rho_{\\text{HML}} + \\epsilon_i \\tag{46}           \n",
     "$$\n",
     "\n",
     "$$\n",
@@ -283,44 +283,44 @@
     "$$\n",
     "\n",
     "$$\n",
-    "\\beta_i^m \\neq \\beta_i^3 \\mid \\text{estimated via separate regression / computed directly}. \\tag{44}\n",
+    "\\beta_i^m \\neq \\beta_i^3 \\mid \\text{estimated via separate regression / computed directly}. \\tag{47}\n",
     "$$\n",
     "\n",
     "### $ 2.3 \\; \\text{Executive Summary Formulation} $\n",
     "\n",
-    "$$ \\text{Innumerate}: \\tag{45}$$ \n",
+    "$$ \\text{Innumerate}: \\tag{48}$$ \n",
     "\n",
-    "$$ \\text{Strategy I} \\tag{46}$$ \n",
+    "$$ \\text{Strategy I} \\tag{49}$$ \n",
     "\n",
-    "$$ 1. \\; \\text{Objective} \\equiv \\text{Maximize Returns w/Risk}. \\tag{47}$$ \n",
+    "$$ 1. \\; \\text{Objective} \\equiv \\text{Maximize Returns w/Risk}. \\tag{50}$$ \n",
     "\n",
     "$$ 2. \\; \\text{Constraints}: $$\n",
     "\n",
-    "   - $$ \\text{The portfolio's beta must be between} \\; -0.5 \\; \\text{and} \\; 0.5. \\tag{48} $$ \n",
+    "   - $$ \\text{The portfolio's beta must be between} \\; -0.5 \\; \\text{and} \\; 0.5. \\tag{51} $$ \n",
     "\n",
-    "   - $$ \\text{The sum of the weights assigned to each asset in the portfolio must equal} \\; 1. \\tag{49} $$\n",
+    "   - $$ \\text{The sum of the weights assigned to each asset in the portfolio must equal} \\; 1. \\tag{52} $$\n",
     "   \n",
-    "   - $$ \\text{Each individual weight can range from} \\; -2 \\; \\text{to} \\; 2. \\tag{50} $$\n",
+    "   - $$ \\text{Each individual weight can range from} \\; -2 \\; \\text{to} \\; 2. \\tag{53} $$\n",
     "\n",
     "<br>\n",
     "\n",
     "$$\n",
-    "\\text{Strategy II} \\tag{51}\n",
+    "\\text{Strategy II} \\tag{54}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "1. \\; \\text{Objective} \\equiv \\text{Maximize Returns Relative to Tracking Error Volatility (TEV)}. \\tag{52}\n",
+    "1. \\; \\text{Objective} \\equiv \\text{Maximize Returns Relative to Tracking Error Volatility (TEV)}. \\tag{55}\n",
     "$$\n",
     "\n",
     "$$\n",
     "2. \\; \\text{Constraints}:\n",
     "$$\n",
     "\n",
-    "   - $$ \\text{The portfolio's beta must be between} \\; -2 \\; \\text{and} \\; 2. \\tag{53} $$\n",
+    "   - $$ \\text{The portfolio's beta must be between} \\; -2 \\; \\text{and} \\; 2. \\tag{56} $$\n",
     "\n",
-    "   - $$ \\text{The sum of the weights assigned to each asset in the portfolio must equal} \\; 1. \\tag{54} $$\n",
+    "   - $$ \\text{The sum of the weights assigned to each asset in the portfolio must equal} \\; 1. \\tag{57} $$\n",
     "\n",
-    "   - $$ \\text{Each individual weight can range from} \\; -2 \\; \\text{to} \\; 2. \\tag{55} $$"
+    "   - $$ \\text{Each individual weight can range from} \\; -2 \\; \\text{to} \\; 2. \\tag{58} $$"
    ]
   },
   {
@@ -331,53 +331,53 @@
     "\n",
     "### $ 3.1 \\; \\text{Setup} $\n",
     "\n",
-    "$$ 1. \\; \\; \\text{Reallocation} : \\texttt{`03-01-2007`} \\sim \\texttt{`03-31-2024`} \\tag{57} $$\n",
+    "$$ 1. \\; \\; \\text{Reallocation} : \\texttt{`03-01-2007`} \\sim \\texttt{`03-31-2024`} \\tag{59} $$\n",
     "\n",
     "<br>\n",
     "\n",
-    "$$ 2. \\; \\; \\text{Input Construction} : \\tag{58} $$\n",
+    "$$ 2. \\; \\; \\text{Input Construction} : \\tag{60} $$\n",
     "\n",
-    "- $$ \\text{LT LB Period} : n_{\\text{LT}} = 120 \\; \\mid \\; \\Sigma_s \\; \\land \\; \\mu_s \\; \\mid \\; \\text{LT} \\equiv S_{120} \\tag{59} $$\n",
+    "- $$ \\text{LT LB Period} : n_{\\text{LT}} = 120 \\; \\mid \\; \\Sigma_s \\; \\land \\; \\mu_s \\; \\mid \\; \\text{LT} \\equiv S_{120} \\tag{61} $$\n",
     "\n",
-    "- $$ \\text{MT LB Period} : n_{\\text{LT}} = 90 \\; \\mid \\; \\Sigma_s \\; \\land \\; \\mu_s \\; \\mid \\; \\text{MT} \\equiv S_{90} \\tag{60} $$\n",
+    "- $$ \\text{MT LB Period} : n_{\\text{LT}} = 90 \\; \\mid \\; \\Sigma_s \\; \\land \\; \\mu_s \\; \\mid \\; \\text{MT} \\equiv S_{90} \\tag{62} $$\n",
     "\n",
-    "- $$ \\text{ST LB Period} : n_{\\text{LT}} = 40 \\; \\mid \\; \\Sigma_s \\; \\land \\; \\mu_s \\; \\mid \\; \\text{MT} \\equiv S_{40} \\tag{61} $$\n",
-    "\n",
-    "<br>\n",
-    "\n",
-    "$$ 3. \\; \\boldsymbol{\\beta}_T \\in \\{0, 1\\} \\tag{62} $$\n",
+    "- $$ \\text{ST LB Period} : n_{\\text{LT}} = 40 \\; \\mid \\; \\Sigma_s \\; \\land \\; \\mu_s \\; \\mid \\; \\text{MT} \\equiv S_{40} \\tag{63} $$\n",
     "\n",
     "<br>\n",
     "\n",
-    "$$ 4. \\; \\boldsymbol{\\lambda} \\in \\{0.10, 0.50\\} \\tag{63} $$\n",
+    "$$ 3. \\; \\boldsymbol{\\beta}_T \\in \\{0, 1\\} \\tag{64} $$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "$$ 4. \\; \\boldsymbol{\\lambda} \\in \\{0.10, 0.50\\} \\tag{65} $$\n",
     "\n",
     "### $ 3.2 \\; \\text{Period Analysis} $\n",
     "\n",
-    "$$ \\text{Period Stratification} : \\tag{64} $$\n",
+    "$$ \\text{Period Stratification} : \\tag{66} $$\n",
     "\n",
-    "- $$ \\text{Period} \\; 1 \\; \\equiv \\; \\text{Pre-Subprime} \\tag{65} $$\n",
+    "- $$ \\text{Period} \\; 1 \\; \\equiv \\; \\text{Pre-Subprime} \\tag{67} $$\n",
     "\n",
-    "- $$ \\text{Period} \\; 2 \\; \\equiv \\; \\text{Subprime} \\tag{66} $$\n",
+    "- $$ \\text{Period} \\; 2 \\; \\equiv \\; \\text{Subprime} \\tag{68} $$\n",
     "\n",
-    "- $$ \\text{Period} \\; 3 \\; \\equiv \\; \\text{Post-Subprime} \\tag{67} $$\n",
+    "- $$ \\text{Period} \\; 3 \\; \\equiv \\; \\text{Post-Subprime} \\tag{69} $$\n",
     "\n",
-    "- $$ \\text{Period} \\; 4 \\; \\equiv \\; \\text{COVID} \\tag{68} $$\n",
+    "- $$ \\text{Period} \\; 4 \\; \\equiv \\; \\text{COVID} \\tag{70} $$\n",
     "\n",
-    "- $$ \\text{Period} \\; 5 \\; \\equiv \\; \\text{Post-Covid} \\tag{69} $$\n",
+    "- $$ \\text{Period} \\; 5 \\; \\equiv \\; \\text{Post-Covid} \\tag{71} $$\n",
     "\n",
     "### $ 3.3 \\; \\text{BackTesting} $\n",
     "\n",
-    "$$ \\text{Definition:} \\; \\text{Historical Data} \\Rightarrow \\text{Performance} \\tag{70} $$\n",
+    "$$ \\text{Definition:} \\; \\text{Historical Data} \\Rightarrow \\text{Performance} \\tag{72} $$\n",
     "\n",
     "$$\n",
     "\\text{Logistical Considerations:}\n",
     "$$\n",
     "\n",
-    "- $$ \\text{BackTest} \\neq \\; \\text{Forecasts} \\Rightarrow \\textbf{Snooping Bias / P-Hacking} \\tag{71} $$\n",
+    "- $$ \\text{BackTest} \\neq \\; \\text{Forecasts} \\Rightarrow \\textbf{Snooping Bias / P-Hacking} \\tag{73} $$\n",
     "\n",
-    "- $$ \\text{Weekly Rebalance} \\tag{72} $$\n",
+    "- $$ \\text{Weekly Rebalance} \\tag{74} $$\n",
     "\n",
-    "- $$ \\{t_i\\}_{i=1}^n : \\tag{73} $$ \n",
+    "- $$ \\{t_i\\}_{i=1}^n : \\tag{75} $$ \n",
     "\n",
     "$$\n",
     "\\begin{cases}\n",
@@ -392,7 +392,7 @@
     "\\text{Repeat this process until the target date} \\; t_n \\; \\text{is reached.}\n",
     "\\end{cases} \n",
     "\n",
-    "\\tag{74}\n",
+    "\\tag{76}\n",
     "$$"
    ]
   },
@@ -402,49 +402,49 @@
    "source": [
     "## $ 4 \\; \\; \\text{ToolKit} \\mid \\text{Arsenal} $\n",
     "\n",
-    "$$ \\text{Strat I} \\Rightarrow \\texttt{CVXPY} \\mid \\text{Strat II} \\Rightarrow \\texttt{Nonlinear Optimizer} \\tag{75} $$\n",
+    "$$ \\text{Strat I} \\Rightarrow \\texttt{CVXPY} \\mid \\text{Strat II} \\Rightarrow \\texttt{Nonlinear Optimizer} \\tag{77} $$\n",
     "\n",
-    "$$ \\text{Data (ETFs) } : \\texttt{yfinance} \\tag{76} $$\n",
+    "$$ \\text{Data (ETFs) } : \\texttt{yfinance} \\tag{78} $$\n",
     "\n",
-    "- $$ 1. \\; \\text{FXE} \\tag{77} $$\n",
+    "- $$ 1. \\; \\text{FXE} \\tag{79} $$\n",
     "\n",
-    "- $$ 2. \\; \\text{EWJ} \\tag{78} $$\n",
+    "- $$ 2. \\; \\text{EWJ} \\tag{80} $$\n",
     "\n",
-    "- $$ 3. \\; \\text{GLD} \\tag{79} $$\n",
+    "- $$ 3. \\; \\text{GLD} \\tag{81} $$\n",
     "\n",
-    "- $$ 4. \\; \\text{QQQ} \\tag{80} $$\n",
+    "- $$ 4. \\; \\text{QQQ} \\tag{82} $$\n",
     "\n",
-    "- $$ 5. \\; \\text{SPY} \\tag{81} $$\n",
+    "- $$ 5. \\; \\text{SPY} \\tag{83} $$\n",
     "\n",
-    "- $$ 6. \\; \\text{SHV} \\tag{82} $$\n",
+    "- $$ 6. \\; \\text{SHV} \\tag{84} $$\n",
     "\n",
-    "- $$ 7. \\; \\text{DBA} \\tag{83} $$\n",
+    "- $$ 7. \\; \\text{DBA} \\tag{85} $$\n",
     "\n",
-    "- $$ 8. \\; \\text{USO} \\tag{84} $$\n",
+    "- $$ 8. \\; \\text{USO} \\tag{86} $$\n",
     "\n",
-    "- $$ 9. \\; \\text{XBI} \\tag{85} $$\n",
+    "- $$ 9. \\; \\text{XBI} \\tag{87} $$\n",
     "\n",
-    "- $$ 10. \\; \\text{ILF} \\tag{86} $$\n",
+    "- $$ 10. \\; \\text{ILF} \\tag{88} $$\n",
     "\n",
-    "- $$ 11. \\; \\text{EPP} \\tag{87} $$\n",
+    "- $$ 11. \\; \\text{EPP} \\tag{89} $$\n",
     "\n",
-    "- $$ 12. \\; \\text{FEZ} \\tag{88} $$\n",
+    "- $$ 12. \\; \\text{FEZ} \\tag{90} $$\n",
     "\n",
     "<br>\n",
     "\n",
-    "- $$ \\text{To Do} $$\n",
+    "$$ \\text{To Do} : \\tag{91} $$\n",
     "\n",
-    "    1. **Task 1** : `download_data(start_date, end_date)`, `compute_daily_returns(...)`, `annualize_data(...)`.\n",
+    "- $$ \\text{Task 1} : \\texttt{`download\\_data(start\\_date, end\\_date)`, `compute\\_daily\\_returns(...)`, `annualize\\_data(...)`.} \\tag{92} $$\n",
     "\n",
-    "    2. **Task 2** : `factor_model(...)`.\n",
-    "    \n",
-    "    3. **Task 3** : `optimize_model(...)`.\n",
+    "- $$ \\text{Task 2} : \\texttt{`factor\\_model(...)`.} \\tag{93} $$\n",
     "\n",
-    "    4. **Task 4** : `backtest(...)`\n",
+    "- $$ \\text{Task 3} : \\texttt{`optimize\\_model(...)`} \\tag{94} $$\n",
     "\n",
-    "    5. **Task 5** : `analyze(...)`\n",
+    "- $$ \\text{Task 4} : \\texttt{`backtest(...)`} \\tag{95} $$\n",
     "\n",
-    "    6. **Task 6** : `summarize(...)`"
+    "- $$ \\text{Task 5} : \\texttt{`analyze(...)`} \\tag{96} $$\n",
+    "\n",
+    "- $$ \\text{Task 6} : \\texttt{`summarize(...)`} \\tag{97} $$"
    ]
   }
  ],
