--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -294,33 +294,33 @@
     "\n",
     "$$ 1. \\; \\text{Objective} \\equiv \\text{Maximize Returns w/Risk}. \\tag{50}$$ \n",
     "\n",
-    "$$ 2. \\; \\text{Constraints}: $$\n",
+    "$$ 2. \\; \\text{Constraints}: \\tag{51}$$\n",
     "\n",
-    "   - $$ \\text{The portfolio's beta must be between} \\; -0.5 \\; \\text{and} \\; 0.5. \\tag{51} $$ \n",
+    "   - $$ \\text{The portfolio's beta must be between} \\; -0.5 \\; \\text{and} \\; 0.5. \\tag{52} $$ \n",
     "\n",
-    "   - $$ \\text{The sum of the weights assigned to each asset in the portfolio must equal} \\; 1. \\tag{52} $$\n",
+    "   - $$ \\text{The sum of the weights assigned to each asset in the portfolio must equal} \\; 1. \\tag{53} $$\n",
     "   \n",
-    "   - $$ \\text{Each individual weight can range from} \\; -2 \\; \\text{to} \\; 2. \\tag{53} $$\n",
+    "   - $$ \\text{Each individual weight can range from} \\; -2 \\; \\text{to} \\; 2. \\tag{54} $$\n",
     "\n",
     "<br>\n",
     "\n",
     "$$\n",
-    "\\text{Strategy II} \\tag{54}\n",
+    "\\text{Strategy II} \\tag{55}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "1. \\; \\text{Objective} \\equiv \\text{Maximize Returns Relative to Tracking Error Volatility (TEV)}. \\tag{55}\n",
+    "1. \\; \\text{Objective} \\equiv \\text{Maximize Returns Relative to Tracking Error Volatility (TEV)}. \\tag{56}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "2. \\; \\text{Constraints}:\n",
+    "2. \\; \\text{Constraints} \\tag{57}:\n",
     "$$\n",
     "\n",
-    "   - $$ \\text{The portfolio's beta must be between} \\; -2 \\; \\text{and} \\; 2. \\tag{56} $$\n",
+    "   - $$ \\text{The portfolio's beta must be between} \\; -2 \\; \\text{and} \\; 2. \\tag{58} $$\n",
     "\n",
-    "   - $$ \\text{The sum of the weights assigned to each asset in the portfolio must equal} \\; 1. \\tag{57} $$\n",
+    "   - $$ \\text{The sum of the weights assigned to each asset in the portfolio must equal} \\; 1. \\tag{59} $$\n",
     "\n",
-    "   - $$ \\text{Each individual weight can range from} \\; -2 \\; \\text{to} \\; 2. \\tag{58} $$"
+    "   - $$ \\text{Each individual weight can range from} \\; -2 \\; \\text{to} \\; 2. \\tag{60} $$"
    ]
   },
   {
@@ -331,53 +331,53 @@
     "\n",
     "### $ 3.1 \\; \\text{Setup} $\n",
     "\n",
-    "$$ 1. \\; \\; \\text{Reallocation} : \\texttt{`03-01-2007`} \\sim \\texttt{`03-31-2024`} \\tag{59} $$\n",
+    "$$ 1. \\; \\; \\text{Reallocation} : \\texttt{`03-01-2007`} \\sim \\texttt{`03-31-2024`} \\tag{61} $$\n",
     "\n",
     "<br>\n",
     "\n",
-    "$$ 2. \\; \\; \\text{Input Construction} : \\tag{60} $$\n",
+    "$$ 2. \\; \\; \\text{Input Construction} : \\tag{62} $$\n",
     "\n",
-    "- $$ \\text{LT LB Period} : n_{\\text{LT}} = 120 \\; \\mid \\; \\Sigma_s \\; \\land \\; \\mu_s \\; \\mid \\; \\text{LT} \\equiv S_{120} \\tag{61} $$\n",
+    "- $$ \\text{LT LB Period} : n_{\\text{LT}} = 120 \\; \\mid \\; \\Sigma_s \\; \\land \\; \\mu_s \\; \\mid \\; \\text{LT} \\equiv S_{120} \\tag{63} $$\n",
     "\n",
-    "- $$ \\text{MT LB Period} : n_{\\text{LT}} = 90 \\; \\mid \\; \\Sigma_s \\; \\land \\; \\mu_s \\; \\mid \\; \\text{MT} \\equiv S_{90} \\tag{62} $$\n",
+    "- $$ \\text{MT LB Period} : n_{\\text{LT}} = 90 \\; \\mid \\; \\Sigma_s \\; \\land \\; \\mu_s \\; \\mid \\; \\text{MT} \\equiv S_{90} \\tag{64} $$\n",
     "\n",
-    "- $$ \\text{ST LB Period} : n_{\\text{LT}} = 40 \\; \\mid \\; \\Sigma_s \\; \\land \\; \\mu_s \\; \\mid \\; \\text{MT} \\equiv S_{40} \\tag{63} $$\n",
-    "\n",
-    "<br>\n",
-    "\n",
-    "$$ 3. \\; \\boldsymbol{\\beta}_T \\in \\{0, 1\\} \\tag{64} $$\n",
+    "- $$ \\text{ST LB Period} : n_{\\text{LT}} = 40 \\; \\mid \\; \\Sigma_s \\; \\land \\; \\mu_s \\; \\mid \\; \\text{MT} \\equiv S_{40} \\tag{65} $$\n",
     "\n",
     "<br>\n",
     "\n",
-    "$$ 4. \\; \\boldsymbol{\\lambda} \\in \\{0.10, 0.50\\} \\tag{65} $$\n",
+    "$$ 3. \\; \\boldsymbol{\\beta}_T \\in \\{0, 1\\} \\tag{66} $$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "$$ 4. \\; \\boldsymbol{\\lambda} \\in \\{0.10, 0.50\\} \\tag{67} $$\n",
     "\n",
     "### $ 3.2 \\; \\text{Period Analysis} $\n",
     "\n",
-    "$$ \\text{Period Stratification} : \\tag{66} $$\n",
+    "$$ \\text{Period Stratification} : \\tag{68} $$\n",
     "\n",
-    "- $$ \\text{Period} \\; 1 \\; \\equiv \\; \\text{Pre-Subprime} \\tag{67} $$\n",
+    "- $$ \\text{Period} \\; 1 \\; \\equiv \\; \\text{Pre-Subprime} \\tag{69} $$\n",
     "\n",
-    "- $$ \\text{Period} \\; 2 \\; \\equiv \\; \\text{Subprime} \\tag{68} $$\n",
+    "- $$ \\text{Period} \\; 2 \\; \\equiv \\; \\text{Subprime} \\tag{70} $$\n",
     "\n",
-    "- $$ \\text{Period} \\; 3 \\; \\equiv \\; \\text{Post-Subprime} \\tag{69} $$\n",
+    "- $$ \\text{Period} \\; 3 \\; \\equiv \\; \\text{Post-Subprime} \\tag{71} $$\n",
     "\n",
-    "- $$ \\text{Period} \\; 4 \\; \\equiv \\; \\text{COVID} \\tag{70} $$\n",
+    "- $$ \\text{Period} \\; 4 \\; \\equiv \\; \\text{COVID} \\tag{72} $$\n",
     "\n",
-    "- $$ \\text{Period} \\; 5 \\; \\equiv \\; \\text{Post-Covid} \\tag{71} $$\n",
+    "- $$ \\text{Period} \\; 5 \\; \\equiv \\; \\text{Post-Covid} \\tag{73} $$\n",
     "\n",
     "### $ 3.3 \\; \\text{BackTesting} $\n",
     "\n",
-    "$$ \\text{Definition:} \\; \\text{Historical Data} \\Rightarrow \\text{Performance} \\tag{72} $$\n",
+    "$$ \\text{Definition:} \\; \\text{Historical Data} \\Rightarrow \\text{Performance} \\tag{74} $$\n",
     "\n",
     "$$\n",
-    "\\text{Logistical Considerations:}\n",
+    "\\text{Logistical Considerations:} \\tag{75}\n",
     "$$\n",
     "\n",
-    "- $$ \\text{BackTest} \\neq \\; \\text{Forecasts} \\Rightarrow \\textbf{Snooping Bias / P-Hacking} \\tag{73} $$\n",
+    "- $$ \\text{BackTest} \\neq \\; \\text{Forecasts} \\Rightarrow \\textbf{Snooping Bias / P-Hacking} \\tag{76} $$\n",
     "\n",
-    "- $$ \\text{Weekly Rebalance} \\tag{74} $$\n",
+    "- $$ \\text{Weekly Rebalance} \\tag{77} $$\n",
     "\n",
-    "- $$ \\{t_i\\}_{i=1}^n : \\tag{75} $$ \n",
+    "- $$ \\{t_i\\}_{i=1}^n : \\tag{78} $$ \n",
     "\n",
     "$$\n",
     "\\begin{cases}\n",
@@ -392,7 +392,7 @@
     "\\text{Repeat this process until the target date} \\; t_n \\; \\text{is reached.}\n",
     "\\end{cases} \n",
     "\n",
-    "\\tag{76}\n",
+    "\\tag{79}\n",
     "$$"
    ]
   },
@@ -402,49 +402,49 @@
    "source": [
     "## $ 4 \\; \\; \\text{ToolKit} \\mid \\text{Arsenal} $\n",
     "\n",
-    "$$ \\text{Strat I} \\Rightarrow \\texttt{CVXPY} \\mid \\text{Strat II} \\Rightarrow \\texttt{Nonlinear Optimizer} \\tag{77} $$\n",
+    "$$ \\text{Strat I} \\Rightarrow \\texttt{CVXPY} \\mid \\text{Strat II} \\Rightarrow \\texttt{Nonlinear Optimizer} \\tag{80} $$\n",
     "\n",
-    "$$ \\text{Data (ETFs) } : \\texttt{yfinance} \\tag{78} $$\n",
+    "$$ \\text{Data (ETFs) } : \\texttt{yfinance} \\tag{81} $$\n",
     "\n",
-    "- $$ 1. \\; \\text{FXE} \\tag{79} $$\n",
+    "- $$ 1. \\; \\text{FXE} \\tag{82} $$\n",
     "\n",
-    "- $$ 2. \\; \\text{EWJ} \\tag{80} $$\n",
+    "- $$ 2. \\; \\text{EWJ} \\tag{83} $$\n",
     "\n",
-    "- $$ 3. \\; \\text{GLD} \\tag{81} $$\n",
+    "- $$ 3. \\; \\text{GLD} \\tag{84} $$\n",
     "\n",
-    "- $$ 4. \\; \\text{QQQ} \\tag{82} $$\n",
+    "- $$ 4. \\; \\text{QQQ} \\tag{85} $$\n",
     "\n",
-    "- $$ 5. \\; \\text{SPY} \\tag{83} $$\n",
+    "- $$ 5. \\; \\text{SPY} \\tag{86} $$\n",
     "\n",
-    "- $$ 6. \\; \\text{SHV} \\tag{84} $$\n",
+    "- $$ 6. \\; \\text{SHV} \\tag{87} $$\n",
     "\n",
-    "- $$ 7. \\; \\text{DBA} \\tag{85} $$\n",
+    "- $$ 7. \\; \\text{DBA} \\tag{88} $$\n",
     "\n",
-    "- $$ 8. \\; \\text{USO} \\tag{86} $$\n",
+    "- $$ 8. \\; \\text{USO} \\tag{89} $$\n",
     "\n",
-    "- $$ 9. \\; \\text{XBI} \\tag{87} $$\n",
+    "- $$ 9. \\; \\text{XBI} \\tag{90} $$\n",
     "\n",
-    "- $$ 10. \\; \\text{ILF} \\tag{88} $$\n",
+    "- $$ 10. \\; \\text{ILF} \\tag{91} $$\n",
     "\n",
-    "- $$ 11. \\; \\text{EPP} \\tag{89} $$\n",
+    "- $$ 11. \\; \\text{EPP} \\tag{92} $$\n",
     "\n",
-    "- $$ 12. \\; \\text{FEZ} \\tag{90} $$\n",
+    "- $$ 12. \\; \\text{FEZ} \\tag{93} $$\n",
     "\n",
     "<br>\n",
     "\n",
-    "$$ \\text{To Do} : \\tag{91} $$\n",
+    "$$ \\text{To Do} : \\tag{94} $$\n",
     "\n",
-    "- $$ \\text{Task 1} : \\texttt{`download\\_data(start\\_date, end\\_date)`, `compute\\_daily\\_returns(...)`, `annualize\\_data(...)`.} \\tag{92} $$\n",
+    "- $$ \\text{Task 1} : \\texttt{`download\\_data(start\\_date, end\\_date)`, `compute\\_daily\\_returns(...)`, `annualize\\_data(...)`.} \\tag{95} $$\n",
     "\n",
-    "- $$ \\text{Task 2} : \\texttt{`factor\\_model(...)`.} \\tag{93} $$\n",
+    "- $$ \\text{Task 2} : \\texttt{`factor\\_model(...)`.} \\tag{96} $$\n",
     "\n",
-    "- $$ \\text{Task 3} : \\texttt{`optimize\\_model(...)`} \\tag{94} $$\n",
+    "- $$ \\text{Task 3} : \\texttt{`optimize\\_model(...)`} \\tag{97} $$\n",
     "\n",
-    "- $$ \\text{Task 4} : \\texttt{`backtest(...)`} \\tag{95} $$\n",
+    "- $$ \\text{Task 4} : \\texttt{`backtest(...)`} \\tag{98} $$\n",
     "\n",
-    "- $$ \\text{Task 5} : \\texttt{`analyze(...)`} \\tag{96} $$\n",
+    "- $$ \\text{Task 5} : \\texttt{`analyze(...)`} \\tag{99} $$\n",
     "\n",
-    "- $$ \\text{Task 6} : \\texttt{`summarize(...)`} \\tag{97} $$"
+    "- $$ \\text{Task 6} : \\texttt{`summarize(...)`} \\tag{100} $$"
    ]
   }
  ],
