--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -446,6 +446,14 @@
     "\n",
     "- $$ \\text{Task 6} : \\texttt{`summarize(...)`} \\tag{100} $$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $ 5 \\; \\; \\text{Performance} \\; + \\; \\text{Risk Reporting} \\; 4 \\; \\text{Strats} $\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
