--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -452,7 +452,20 @@
    "metadata": {},
    "source": [
     "## $ 5 \\; \\; \\text{Performance} \\; + \\; \\text{Risk Reporting} \\; 4 \\; \\text{Strats} $\n",
-    "\n"
+    "\n",
+    "$$ \\text{KPIs} \\tag{101} : $$\n",
+    "\n",
+    "- "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- $\\text{Cumulative PnL / Return}$\n",
+    "- $\\text{Average Daily Arithmetic / Geometric Return} \\mid \\text{Daily Min Return}$\n",
+    "- $\\text{10 Day Max Drawdown} \\mid \\text{Sharpe}$\n",
+    "- $\\text{Vol, Skew, (Excess) Kurt, (Modified) VaR, Expected Shortfall (CVar)}$"
    ]
   }
  ],
