--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -455,7 +455,13 @@
     "\n",
     "$$ \\text{KPIs} \\tag{101} : $$\n",
     "\n",
-    "- "
+    "- $$ \\text{Cumulative PnL / Return} \\tag{102} $$\n",
+    "\n",
+    "- $$ \\text{Average Daily Arithmetic / Geometric Return} \\mid \\text{Daily Min Return} \\tag{103} $$\n",
+    "\n",
+    "- $$ \\text{10 Day Max Drawdown} \\mid \\text{Sharpe} \\tag{104} $$\n",
+    "\n",
+    "- $$ \\text{Vol, Skew, (Excess) Kurt, (Modified) VaR, Expected Shortfall (CVar)} \\tag{105} $$"
    ]
   },
   {
