--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -461,7 +461,30 @@
     "\n",
     "- $$ \\text{10 Day Max Drawdown} \\mid \\text{Sharpe} \\tag{104} $$\n",
     "\n",
-    "- $$ \\text{Vol, Skew, (Excess) Kurt, (Modified) VaR, Expected Shortfall (CVar)} \\tag{105} $$"
+    "- $$ \\text{Vol, Skew, (Excess) Kurt, (Modified) VaR, Expected Shortfall (CVar)} \\tag{105} $$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "$$ \\text{Tabular Formulation}: \\tag{106} $$\n",
+    "\n",
+    "<style>\n",
+    "table {\n",
+    "  width: 100%;\n",
+    "  border-collapse: collapse;\n",
+    "}\n",
+    "th, td {\n",
+    "  border: 1px solid black;\n",
+    "  text-align: center;\n",
+    "  vertical-align: middle;\n",
+    "  padding: 8px;\n",
+    "}\n",
+    "</style>\n",
+    "\n",
+    "|                    | $ S_{40}(\\beta_T = 0) $   | $ S_{90}(\\beta_T = 1) $   | $ S_{120}(\\beta_T = 0) $   | SPY |\n",
+    "|:------------------:|:-------------------------:|:-------------------------:|:-------------------------:|:---:|\n",
+    "| **Mean Return**    |                           |                           | 12                         |     |\n",
+    "| **:**              |                           |                           | :                          |     |\n",
+    "| **Max DD**         |                           |                           | 8                          |     |"
    ]
   }
  ],
