--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -484,7 +484,14 @@
     "|:------------------:|:-------------------------:|:-------------------------:|:-------------------------:|:---:|\n",
     "| **Mean Return**    |                           |                           | 12                         |     |\n",
     "| **:**              |                           |                           | :                          |     |\n",
-    "| **Max DD**         |                           |                           | 8                          |     |"
+    "| **Max DD**         |                           |                           | 8                          |     |\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "$$ \\text{Furthermore}: \\tag{107} $$\n",
+    "\n",
+    "$$ 1. \\; \\; \\text{Evolution Plot} : \\text{Cumulative Daily PnL} \\; \\mid \\; P_0 = \\$100, \\text{SPY}_0 = \\$100. \\tag{108} $$\n",
+    "$$ 2. \\; \\; \\text{Plot + Analyze (Daily) Return Distribution}. \\tag{109} $$"
    ]
   }
  ],
