--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -493,6 +493,38 @@
     "$$ 1. \\; \\; \\text{Evolution Plot} : \\text{Cumulative Daily PnL} \\; \\mid \\; P_0 = \\$100, \\text{SPY}_0 = \\$100. \\tag{108} $$\n",
     "$$ 2. \\; \\; \\text{Plot + Analyze (Daily) Return Distribution}. \\tag{109} $$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $6 \\; \\; \\text{Deliverables} $\n",
+    "\n",
+    "$$ \n",
+    "1 \\equiv \\text{Report : Findings, Conclusions, Estimator Impact on Strats (When? Why?),}\n",
+    "\n",
+    "\\\\\n",
+    "\n",
+    "\\text{Crisis Periods (Subprime, COVID);}\n",
+    "\n",
+    "\\tag{110}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "2 \\equiv \\text{Axes : Estimator Term-Structure Sensitivity (ST, MT, LT) for} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\boldsymbol{\\mu} \\mid \\text{Target} \\; \\beta_T \\; \\text {Sensitivity};\n",
+    "\\tag{111}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "3 \\equiv \\text{Notation, Strats, Graphs, \\& Tables Description;}\n",
+    "\\tag{112}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "4 \\equiv \\texttt{Code.}\n",
+    "\\tag{113}\n",
+    "$$"
+   ]
   }
  ],
  "metadata": {
