--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -44,15 +44,15 @@
     "$$\n",
     "\n",
     "$$\n",
-    "S_{ \\{1\\} } \\Leftarrow \\text{Information Ratio} \\tag{6}\n",
+    "S_{ \\{2\\} } \\Leftarrow \\text{Information Ratio} \\tag{6}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{Post optimization, I compare model outcomes while evaluating estimator length sensitivity} \\tag{7}\n",
+    "\\text{Post Optimization} : \\text{Model Comparative Analysis (Estimator Length Sensitivity)} \\tag{7}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{[covariance matrix} \\; \\boldsymbol{\\Sigma} \\land \\text{expected returns} \\; \\boldsymbol{\\mu}] \\; \\text{across market regimes} \\tag{8}\n",
+    "[\\text{covariance matrix} \\; \\boldsymbol{\\Sigma} \\land \\text{expected returns} \\; \\boldsymbol{\\mu}] \\; \\text{across market regimes} \\tag{8}\n",
     "$$\n",
     "\n",
     "### $ 1.2 \\; \\text{Reallocation} $\n",
