--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -19,6 +19,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$ \\text{Across market regimes:} \\;  $$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## $ 1 \\; \\text{Overview} $\n",
     "\n",
     "### $ 1.1 \\; \\text{Goal} $\n",
@@ -52,7 +59,7 @@
     "$$\n",
     "\n",
     "$$\n",
-    "[\\text{covariance matrix} \\; \\boldsymbol{\\Sigma} \\land \\text{expected returns} \\; \\boldsymbol{\\mu}] \\; \\text{across market regimes} \\tag{8}\n",
+    "[\\text{Covariance Matrix} \\; \\boldsymbol{\\Sigma} \\land \\text{Expected Returns} \\; \\boldsymbol{\\mu}] : \\; R_j \\; \\forall \\; j \\in \\{1, 2, \\dots, M\\} \\tag{8}\n",
     "$$\n",
     "\n",
     "### $ 1.2 \\; \\text{Reallocation} $\n",
