--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -84,7 +84,7 @@
     "### $ 1.3 \\; \\text{Performance Evaluation} $\n",
     "\n",
     "$$\n",
-    "\\text{The performance / risk profiles are sensitive to the target Beta and the market environment.} \\tag{15}\n",
+    "\\text{Performance / Risk Profiles} \\Leftarrow \\text{Sensitive} \\Leftarrow \\text{Target Beta} : \\beta_T \\; \\land \\; \\text{'Market'} \\tag{15}\n",
     "$$\n",
     "\n",
     "$$\n",
