--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -101,15 +101,15 @@
     "\\text{Portfolio Characteristics}: \\tag{18}\n",
     "$$\n",
     "\n",
-    "- $$ \\text{Return}: \\mu \\tag{19} $$\n",
+    "- $$ \\text{Annualized Return}: \\mu_a \\tag{19} $$\n",
     "\n",
-    "- $$ \\text{Volatility (Vol)}: \\sigma \\tag{20} $$\n",
+    "- $$ \\text{Historical Vol}: \\sigma_h \\tag{20} $$\n",
     "\n",
-    "- $$ \\text{Skewness (Skew)}: \\mathbb{E}\\left[\\left(\\frac{x - \\mu}{\\sigma}\\right)^3\\right] = \\frac{\\mu_3}{\\sigma^3} = \\frac{\\kappa_3}{\\kappa_2^{3/2}} \\tag{21} $$\n",
+    "- $$ \\text{Skew}: \\mathbb{E}\\left[\\left(\\frac{x - \\mu}{\\sigma}\\right)^3\\right] = \\frac{\\mu_3}{\\sigma^3} = \\frac{\\kappa_3}{\\kappa_2^{3/2}} \\tag{21} $$\n",
     "\n",
-    "- $$ \\text{Value at Risk (VaR) / Expected Shortfall (ES)} \\tag{22} $$\n",
+    "- $$ \\text{VaR / ES (CVaR)} \\tag{22} $$\n",
     "\n",
-    "- $$ \\text{Sharpe Ratio}: \\frac{\\mathbb{E}[R_a - R_b]}{\\sigma_a} = \\frac{\\mathbb{E}[R_a - R_b]}{\\sqrt{\\mathbb{V}(R_a - R_b)}} \\tag{23} $$\n",
+    "- $$ \\text{Sharpe}: \\frac{\\mathbb{E}[R_a - R_b]}{\\sigma_a} = \\frac{\\mathbb{E}[R_a - R_b]}{\\sqrt{\\mathbb{V}(R_a - R_b)}} \\tag{23} $$\n",
     "\n",
     "### $1.4 \\; \\text{Simplification}$\n",
     "\n",
