--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -113,7 +113,7 @@
     "\n",
     "### $1.4 \\; \\text{Simplification}$\n",
     "\n",
-    "$$ \\text{Look-Back} \\; \\boldsymbol{\\mu} \\; \\text{Estimators}: \\tag{24} $$\n",
+    "$$ \\text{Look-Back} \\; \\boldsymbol{\\mu} \\; \\hat{\\text{Estimators}}: \\tag{24} $$\n",
     "\n",
     "- $$ \\text{Long-Term Estimator (LTE)} : \\text{LT} \\Rightarrow \\text{LB} \\in \\{180 \\; \\text{Days}\\} \\tag{25} $$\n",
     "\n",
