--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -124,24 +124,22 @@
     "$$ \\therefore $$\n",
     "\n",
     "$$\n",
-    "\\text{Term-Structure for Covariance} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\text{Expected Return} \\; \\boldsymbol{\\mu}. \\tag{28}\n",
+    "\\text{Term-Structure : Covariance} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\text{Expected Return} \\; \\boldsymbol{\\mu}. \\tag{28}\n",
     "$$\n",
     "\n",
     "### $ 1.5 \\; \\text{Synthesis} $\n",
     "\n",
     "$$\n",
-    "\\text{Optimal portfolio behavior constructed from} \\tag{29}\n",
+    "\\text{Optimal Portfolio} \\Leftarrow \\hat{\\boldsymbol{\\Sigma}} \\mid \\hat{\\boldsymbol{\\mu}} \\tag{29}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{covariance and expected return estimators} \\tag{30}\n",
+    "\\text{Variance} \\Leftarrow \\text{Strategic \\& Market} \\; \\Delta \\tag{31}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{will vary due to strategic and market differences}. \\tag{31}\n",
+    "\\Downarrow\n",
     "$$\n",
-    "\n",
-    "<br>\n",
     "\n",
     "$$\n",
     "S_{40}^{90} \\equiv \\boldsymbol{\\hat{\\Sigma}} \\Rightarrow \\text{40 Days} \\; \\land \\; \\boldsymbol{\\hat{\\mu}} \\Rightarrow \\text{90 Days} \\tag{32}\n",
