--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -145,7 +145,9 @@
     "S_{40}^{90} \\equiv \\boldsymbol{\\hat{\\Sigma}} \\Rightarrow \\text{40 Days} \\; \\land \\; \\boldsymbol{\\hat{\\mu}} \\Rightarrow \\text{90 Days} \\tag{32}\n",
     "$$\n",
     "\n",
-    "<br>\n",
+    "$$\n",
+    "\\therefore\n",
+    "$$\n",
     "\n",
     "$$\n",
     "\\text{Objective}: \\tag{33}\n",
