--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -115,11 +115,11 @@
     "\n",
     "$$ \\text{Look-Back} \\; \\boldsymbol{\\mu} \\; \\hat{\\text{Estimators}}: \\tag{24} $$\n",
     "\n",
-    "- $$ \\text{Long-Term Estimator (LTE)} : \\text{LT} \\Rightarrow \\text{LB} \\in \\{180 \\; \\text{Days}\\} \\tag{25} $$\n",
+    "- $$ \\text{Long-Term Estimator (LTE)} : \\hat{\\text{LT}} \\Rightarrow \\text{LB} \\in \\{180 \\; \\text{Days}\\} \\tag{25} $$\n",
     "\n",
-    "- $$ \\text{Mid-Term Estimator (MTE)} : \\text{MT} \\Rightarrow \\text{LB} \\in \\{90 \\; \\text{Days}\\} \\tag{26} $$\n",
+    "- $$ \\text{Mid-Term Estimator (MTE)} : \\hat{\\text{MT}} \\Rightarrow \\text{LB} \\in \\{90 \\; \\text{Days}\\} \\tag{26} $$\n",
     "\n",
-    "- $$ \\text{Short-Term Estimator (STE)} : \\text{ST} \\Rightarrow \\text{LB} \\in \\{40 \\; \\text{Days}, 60 \\; \\text{Days}\\} \\tag{27} $$\n",
+    "- $$ \\text{Short-Term Estimator (STE)} : \\hat{\\text{ST}} \\Rightarrow \\text{LB} \\in \\{40 \\; \\text{Days}, 60 \\; \\text{Days}\\} \\tag{27} $$\n",
     "\n",
     "$$ \\therefore $$\n",
     "\n",
